# type-trainer

./: Makefile  README.md  config.txt
src/: config.c  config.h  config_file.c  config_file.h  game.c  game.h  game_metrics.c  game_metrics.h  main.c  texture.c  texture.h  window.c  window.h  word.c  word.h
windows/: CMakeLists.txt
